refactor: use URI.toURL() instead of deprecated URL(String) constructor